--- a/css/style.css
+++ b/css/style.css
@@ -68,9 +68,11 @@ body {
     padding: 10px 10px;
 }
 
-.clear {
-    border: none !important;
-    margin: 20px 224px;
-    margin-top: 0%;
-    /* margin-left: 29px; */
+.UnitCircleButtons {
+    margin-left: 30px;
+    padding-bottom: 30px;
+}
+
+.dropdown {
+    display: inline-block;
 }
