--- a/css/style.css
+++ b/css/style.css
@@ -8,11 +8,13 @@ body {
     height: 300px;
     width: 100%;
     border-radius: 20px;
+    background-color: white;
 }
 
 .headerContainer {
-    width: 80%;
+    /* width: 80%; */
     margin: auto;
+    background-color: white;
 }
 
 .navbar-light {
@@ -56,7 +58,7 @@ body {
 } */
 
 .graphSection {
-    width: 80%;
+    /* width: 80%; */
     margin: auto;
     background-color: white;
 }
@@ -66,6 +68,7 @@ body {
     border: 1px solid black;
     margin: 35px 35px;
     padding: 10px 10px;
+    /* margin: auto !important; */
 }
 
 .UnitCircleButtons {
@@ -75,4 +78,14 @@ body {
 
 .dropdown {
     display: inline-block;
+}
+
+.curve_chart {
+    padding: 0px 0px;
+    width: 100%;
+}
+
+.curve2 {
+    width: 100% !important;
+    height: 400px;
 }
