--- a/templates/index.html
+++ b/templates/index.html
@@ -39,90 +39,111 @@
             </nav>
         </div>
     </header>
-    <div class="container-fluid graphSection">
-        <div class="row">
-            <div class="c">
-                <div class="graphContainer">
-                    <div id='magGraph' class="magGraph graph">
-                        <!-- Plotly chart will be drawn inside this DIV -->
-                    </div>
-                    <div id='PhaseGraph' class="PhaseGraph graph">
-                        <!-- Plotly chart will be drawn inside this DIV -->
-                    </div>
-                </div>
-                <div class="secondGraphContainer">
-                    <div class="graph2">
-                        <canvas id="myCanvas" onclick="showCoords(event)" class="myCanvas" width="245" height="228"></canvas>
-                        <div class="UnitCircleButtons">
-                            <button type="button" class="btn btn-dark" onclick="AddZeros()">Add Zero</button>
-                            <button type=" button " class="btn btn-dark " onclick="AddPoles() ">Add Pole</button>
-                            <button type=" button " class="btn btn-dark " onclick=" Conjugate(); ">Conjugate</button>
-                            <button type=" button " class="btn btn-dark " onclick=" Delete(); ">Delete</button>
-                            <div class="dropdown">
-                                <button class="btn btn-dark dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Zeroes
-                                </button>
-                                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                                    <a class="dropdown-item " onclick="currentIndx = 0; zeroFlag = true; poleFlag = false; ">Zero1</a>
-                                    <a class="dropdown-item " onclick="currentIndx = 1; zeroFlag = true; poleFlag = false;  ">Zero2</a>
-                                    <a class="dropdown-item " onclick="currentIndx = 2; zeroFlag = true; poleFlag = false;  ">Zero3</a>
-                                </div>
-                            </div>
-                            <div class="dropdown">
-                                <button class="btn btn-dark dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Poles
-                                </button>
-                                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                                    <a class="dropdown-item " onclick="currentIndx = 0; zeroFlag = false; poleFlag = true; ">Pole1</a>
-                                    <a class="dropdown-item " onclick="currentIndx = 1; zeroFlag = false; poleFlag = true;  ">Pole2</a>
-                                    <a class="dropdown-item " onclick="currentIndx = 2; zeroFlag = false; poleFlag = true;  ">Pole3</a>
-                                </div>
-                            </div>
-                            <div class="dropdown">
-                                <button class="btn btn-dark dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Clear
-                                </button>
-                                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                    <a class="dropdown-item " href="# " onclick="clearZeros() ">Clear All Zeroes</a>
-                                    <a class="dropdown-item " href="# " onclick="clearPoles() ">Clear All Poles</a>
-                                    <a class="dropdown-item " href="# " onclick="clearAll() ">Clear All</a>
-                                </div>
-                                <a href=# id='process_input'><button class='btn btn-dark'>Submit</button></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="graph2">
-                        <div id='correctedPhase' class="correctedPhase ">
-                            <!-- Plotly chart will be drawn inside this DIV -->
 
-                        </div>
-                        <div class="dropdown" style="padding-bottom: 30px;">
-                            <button class="btn btn-dark dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Value of A
-                            </button>
-                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                <a class="dropdown-item " href="# " onclick="">0.1</a>
-                                <a class="dropdown-item " href="# " onclick="">0.2</a>
-                                <a class="dropdown-item " href="# " onclick="">0.3</a>
-                                <a class="dropdown-item " href="# " onclick="">0.4</a>
-                                <a class="dropdown-item " href="# " onclick="">0.5</a>
-                                <a class="dropdown-item " href="# " onclick="">0.6</a>
-                                <a class="dropdown-item " href="# " onclick="">0.7</a>
-                                <a class="dropdown-item " href="# " onclick="">0.8</a>
-                                <a class="dropdown-item " href="# " onclick="">0.9</a>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-
-
+    <section class='firstSection'>
+        <div class="secondGraphContainer">
+            <div class="graph2 unitCircle" >
+                <canvas id="myCanvas" onclick="showCoords(event)" class="myCanvas" width="245" height="228"></canvas>
 
             </div>
 
-
+            <div class="graph2 ">
+                <div id='magGraph' class="magGraph">
+                    <!-- Plotly chart will be drawn inside this DIV -->
+                </div>
+                
+            </div>
+            <div class="clear"></div><!-- clear -->
         </div>
-    </div>
+        <div>
+            <span class='firstLabel label'>Unit Circle</span>
+            <span class='secondLabel label'>Magnitude Graph</span>
+        </div>
+    </section>
+
+
+
+    <section class="buttons">
+        <div class="container">
+            <div class="row">
+              <div class="col"><button type="button" class="btn btn-dark" onclick="AddZeros()">Add Zero</button></div>
+              <div class="col"><button type=" button " class="btn btn-dark " onclick="AddPoles() ">Add Pole</button></div>
+              <div class="col"><button type=" button " class="btn btn-dark " onclick=" Conjugate(); ">Conjugate</button></div>
+              <div class="col"><button type=" button " class="btn btn-dark " onclick=" Delete(); ">Delete</button></div>
+              <div class="col"><div class="dropdown">
+                        <button class="btn btn-dark dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Zeroes
+                        </button>
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                            <a class="dropdown-item " onclick="currentIndx = 0; zeroFlag = true; poleFlag = false; ">Zero1</a>
+                            <a class="dropdown-item " onclick="currentIndx = 1; zeroFlag = true; poleFlag = false;  ">Zero2</a>
+                            <a class="dropdown-item " onclick="currentIndx = 2; zeroFlag = true; poleFlag = false;  ">Zero3</a>
+                        </div>
+                    </div></div>
+              <div class="col"><div class="dropdown">
+                <button class="btn btn-dark dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Poles
+                </button>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                    <a class="dropdown-item " onclick="currentIndx = 0; zeroFlag = false; poleFlag = true; ">Pole1</a>
+                    <a class="dropdown-item " onclick="currentIndx = 1; zeroFlag = false; poleFlag = true;  ">Pole2</a>
+                    <a class="dropdown-item " onclick="currentIndx = 2; zeroFlag = false; poleFlag = true;  ">Pole3</a>
+                </div>
+            </div></div>
+              <div class="col"><div class="dropdown">
+                <button class="btn btn-dark dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Clear
+                </button>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <a class="dropdown-item " href="# " onclick="clearZeros() ">Clear All Zeroes</a>
+                    <a class="dropdown-item " href="# " onclick="clearPoles() ">Clear All Poles</a>
+                    <a class="dropdown-item " href="# " onclick="clearAll() ">Clear All</a>
+                </div>
+            </div></div>
+              <div class="col"><a href=# id='draw'><button class='btn btn-danger'>Draw</button></a></div>
+            </div>
+
+          </div>
+    </section>
+    <section>
+        <div class="graphContainer">
+                    
+            <div id='PhaseGraph' class="PhaseGraph graph">
+                <!-- Plotly chart will be drawn inside this DIV -->
+            </div>
+            <div id='correctedPhase' class="correctedPhase graph ">
+                <!-- Plotly chart will be drawn inside this DIV -->
+
+            </div>
+            <div class="clear"></div><!-- clear -->
+        </div>
+        <div>
+            <span class='thirdLabel label'>Phase Graph</span>
+            <span class='fourthLabel label'>Corrected Phase Graph</span>
+        </div>
+        <div><div class="dropdown Avalue" style="padding-bottom: 30px;">
+            <select id="list" style="padding: 10px;" onchange="getSelectValue();">
+                <option value="-0.5" selected disabled hidden>
+                    Select value of A
+                </option>
+                <option value="-0.9">-0.9</option>
+                <option value="-0.7">-0.7</option>
+                <option value="-0.5">-0.5</option>
+                <option value="-0.3">-0.3</option>
+                <option value="-0.1">-0.1</option>
+                <option value="0.1">0.1</option>
+                <option value="0.3">0.3</option>
+                <option value="0.5">0.5</option>
+                <option value="0.7">0.7</option>
+                <option value="0.9">0.9</option>
+              </select>
+        </div></div>
+    </section>
+
+
+
+
+
 
     <script src='https://cdn.plot.ly/plotly-2.0.0.min.js'></script>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
@@ -131,9 +152,6 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js " integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN " crossorigin="anonymous "></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js " integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF " crossorigin="anonymous "></script>
     <script src="/static/js/main.js "></script>
-    <script>
-    </script>
-    <a href=# id=draw><button class='btn btn-default'>Draw</button></a>
 </body>
 
 </html>
