--- a/templates/index.html
+++ b/templates/index.html
@@ -9,9 +9,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/static/css/style.css">
-
-
-
     <title>Document</title>
 </head>
 
@@ -21,7 +18,7 @@
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <img class="navIcon" src="/static/img/Z.svg" alt="">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon"></span>
                 </button>
 
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -121,7 +118,12 @@
             <span class='thirdLabel label'>Phase Graph</span>
             <span class='fourthLabel label'>Corrected Phase Graph</span>
         </div>
-        <div><div class="dropdown Avalue" style="padding-bottom: 30px;">
+        <div>
+            <div>
+                <input type="checkbox" onchange = "filter_flag = !filter_flag" id="All-Pass" name="All-Pass" value="All-Pass">
+                <label for="All-Pass"> Apply All-Pass Filter </label><br>
+            </div>
+            <div class="dropdown Avalue" style="padding-bottom: 30px;">
             <select id="list" style="padding: 10px;" onchange="getSelectValue();">
                 <option value="-0.5" selected disabled hidden>
                     Select value of A
@@ -136,8 +138,9 @@
                 <option value="0.5">0.5</option>
                 <option value="0.7">0.7</option>
                 <option value="0.9">0.9</option>
-              </select>
-        </div></div>
+            </select>
+            </div>
+        </div>
     </section>
 
 
